public/stylesheets/creative.css
/* ... */
.modalDialog:target {
	opacity:1;
	pointer-events: auto;
}

.card-inverse {
   background-color: rgba(51,51,51,.75);
   border-color: white;
   padding: 5px 20px 13px 20px;
 	 border-radius: 10px;
   margin: 5% auto;
}

.modalDialog > div {
	width: 800px;
	position: relative;
	margin: 20% auto;
	padding: 5px 20px 13px 20px;
	border-radius: 10px;
	background: rgba(240,95,64,.5);
}
/*.close {
	background: #606061;
	color: #FFFFFF;
	line-height: 25px;
	position: absolute;
	right: -12px;
	text-align: center;
	top: -10px;
	width: 24px;
	text-decoration: none;
	font-weight: bold;
	-webkit-border-radius: 12px;
	-moz-border-radius: 12px;
	border-radius: 12px;
	-moz-box-shadow: 1px 1px 3px #000;
	-webkit-box-shadow: 1px 1px 3px #000;
	box-shadow: 1px 1px 3px #000;
}*/

.close:hover { background: #00d9ff; }

.section-heading {
    margin-top: 0;
}

.service-box {
    max-width: 400px;
    margin: 50px auto 0;
}

@media (min-width: 992px) {
    .service-box {
        margin: 20px auto 0;
    }
}

.service-box i {
    font-size: 3em;
}

.service-box p {
    margin-bottom: 0;
}

.portfolio-box {
    position: relative;
    display: block;
    max-width: 650px;
    margin: 0 auto;
}

.portfolio-box .portfolio-box-caption {
    color: white;
    opacity: 0;
    display: block;
    background: rgba(240, 95, 64, 0.9);
    position: absolute;
    bottom: 0;
    text-align: center;
    width: 100%;
    height: 100%;
    -webkit-transition: all 0.35s;
    -moz-transition: all 0.35s;
    transition: all 0.35s;
}

.portfolio-box .portfolio-box-caption .portfolio-box-caption-content {
    width: 100%;
    text-align: center;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
}

.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category, .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
    font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
    padding: 0 15px;
}

.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
    text-transform: uppercase;
    font-weight: 600;
    font-size: 14px;
}

.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
    font-size: 18px;
}

.portfolio-box:hover .portfolio-box-caption {
    opacity: 1;
}

.portfolio-box:focus {
    outline: none;
}

@media (min-width: 768px) {
    .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
        font-size: 16px;
    }
    .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
        font-size: 22px;
    }
}

.call-to-action h2 {
    margin: 0 auto 20px;
}

.text-primary {
    color: #F05F40;
}

.no-gutter>[class*='col-'] {
    padding-right: 0;
    padding-left: 0;
}

.btn-default {
    color: #222222;
    background-color: white;
    border-color: white;
    -webkit-transition: all 0.35s;
    -moz-transition: all 0.35s;
    transition: all 0.35s;
}

.btn-default:hover, .btn-default:focus, .btn-default.focus, .btn-default:active, .btn-default.active, .open>.dropdown-toggle.btn-default {
    color: #222222;
    background-color: #f2f2f2;
    border-color: #ededed;
}

.btn-default:active, .btn-default.active, .open>.dropdown-toggle.btn-default {
    background-image: none;
}


/*begin form css*/

input {
    outline: none;
}

input[type=search] {
    -webkit-appearance: textfield;
    -webkit-box-sizing: content-box;
    font-family: inherit;
    font-size: 120%;
}

input::-webkit-search-decoration, input::-webkit-search-cancel-button {
    display: none;
}

input[type=search] {
    background: rgba(240, 95, 64, .5) url(http://static.tumblr.com/ftv85bp/MIXmud4tx/search-icon.png) no-repeat 9px center;
    border: solid 1px rgb(240, 95, 64);
    padding: 9px 10px 9px 32px;
    width: 115px;
    -webkit-border-radius: 10em;
    -moz-border-radius: 10em;
    border-radius: 10em;
    -webkit-transition: all 2s;
    -moz-transition: all 2s;
    transition: all 2s;
}

input[type=search]:focus {
    color: #D3D3D3;
    width: 300px;
    background-color: rgba(240, 95, 64, .5);
    border-color: rgb(240, 95, 64);
    -webkit-box-shadow: 0 0 5px rgba(109, 207, 246, .5);
    -moz-box-shadow: 0 0 5px rgba(109, 207, 246, .5);
    box-shadow: 0 0 5px rgba(109, 207, 246, .5);
}

input:-moz-placeholder {
    color: #D3D3D3;
}

input::-webkit-input-placeholder {
    color: #D3D3D3;
}


/*end form css*/

.btn-default.disabled, .btn-default[disabled], fieldset[disabled] .btn-default, .btn-default.disabled:hover, .btn-default[disabled]:hover, fieldset[disabled] .btn-default:hover, .btn-default.disabled:focus, .btn-default[disabled]:focus, fieldset[disabled] .btn-default:focus, .btn-default.disabled.focus, .btn-default[disabled].focus, fieldset[disabled] .btn-default.focus, .btn-default.disabled:active, .btn-default[disabled]:active, fieldset[disabled] .btn-default:active, .btn-default.disabled.active, .btn-default[disabled].active, fieldset[disabled] .btn-default.active {
    background-color: white;
    border-color: white;
}

.btn-default .badge {
    color: white;
    background-color: #222222;
}

.btn-primary {
    color: white;
    background-color: #F05F40;
    border-color: #F05F40;
    -webkit-transition: all 0.35s;
    -moz-transition: all 0.35s;
    transition: all 0.35s;
}

.btn-primary:hover, .btn-primary:focus, .btn-primary.focus, .btn-primary:active, .btn-primary.active, .open>.dropdown-toggle.btn-primary {
    color: white;
    background-color: #ee4b28;
    border-color: #ed431f;
}

.btn-primary:active, .btn-primary.active, .open>.dropdown-toggle.btn-primary {
    background-image: none;
}
/* ... */

